--- a/.github/workflows/api-gateway-service.yaml
+++ b/.github/workflows/api-gateway-service.yaml
@@ -13,7 +13,7 @@ env:
   GKE_CLUSTER: peerprep-cluster-1
   GKE_ZONE: asia-southeast1
   REPOSITORY_NAME: peerprep
-  IMAGE_VERSION: ${GITHUB_SHA}
+  IMAGE_VERSION: ${{github.sha}}
   SERVICE: api-gateway
   IMAGE: gateway
 
